--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+#hocvien{
+    background-color: aquamarine;
+    width: 300px;
+}
+.error{
+    color: red;
+    font-style: italic;
+}
